--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Al Thakeel | Strategic Brand Holding Company" />
     <meta property="og:description" content="Managing a diverse portfolio of businesses and investments across sectors." />
     <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
-    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:url" content="https://althakeel.com" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter -->
@@ -26,7 +26,7 @@
     <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
 
     <!-- Icons -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./Favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!-- Web App Manifest -->
