--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  
+  <title>Al Thakeel | Strategic Brand Holding Company in Diversified Sectors</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Al Thakeel is a strategic brand holding company with a diverse portfolio of businesses and investments spanning multiple industries, delivering innovation and growth." />
+  <meta name="keywords" content="Al Thakeel, strategic brand holding, diversified investments, business sectors, corporate group, investment company" />
+  <meta name="author" content="Al Thakeel" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Al Thakeel | Strategic Brand Holding Company" />
+  <meta property="og:description" content="Diverse portfolio of investments across multiple industries to drive strategic growth." />
+  <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
+  <meta property="og:url" content="https://althakeel.com" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Al Thakeel | Strategic Brand Holding Company" />
+  <meta name="twitter:description" content="Diverse investments and brand management across key business sectors." />
+  <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
 
-    <title>Al Thakeel | Strategic Brand Holding Company</title>
+  <!-- Icons -->
+  <link rel="icon" href="./Favicon.ico" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  
+  <!-- Manifest -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Al Thakeel is a strategic brand holding company managing a diverse portfolio of businesses and investments across various sectors." />
-    <meta name="keywords" content="Al Thakeel, brand holding company, diversified investments, business group, strategic management, corporate group" />
-    <meta name="author" content="Al Thakeel" />
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Al Thakeel",
+    "url": "https://althakeel.com",
+    "logo": "https://althakeel.com/logo192.png",
+    "description": "Strategic brand holding company managing diversified investments across industries.",
+    "sameAs": [
+      "https://www.facebook.com/althakeel",
+      "https://www.linkedin.com/company/althakeel",
+      "https://twitter.com/althakeel"
+    ]
+  }
+  </script>
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Al Thakeel | Strategic Brand Holding Company" />
-    <meta property="og:description" content="Managing a diverse portfolio of businesses and investments across sectors." />
-    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
-    <meta property="og:url" content="https://althakeel.com" />
-    <meta property="og:type" content="website" />
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-14NNR9G6GG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-14NNR9G6GG');
+  </script>
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Al Thakeel | Strategic Brand Holding Company" />
-    <meta name="twitter:description" content="Managing a diverse portfolio of businesses and investments across sectors." />
-    <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
+  <!-- AddThis Social Sharing -->
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-123456789"></script>
 
-    <!-- Icons -->
-    <link rel="icon" href="./Favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <!-- TODO: Defer or async load CSS/JS to avoid render-blocking -->
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
 
-    <!-- Web App Manifest -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- Main Semantic Structure -->
+  <main>
+    <header>
+      <h1>Al Thakeel</h1>
+      <h2>Strategic Brand Holding Company</h2>
+    </header>
 
+    <!-- Add content with structured heading hierarchy -->
+    <!-- Example: About Us, Our Brands, News, Contact -->
+  </main>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-14NNR9G6GG"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-14NNR9G6GG');
-    </script>
-  </head>
-  <body> 
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+  <!-- Custom 404 Page (can be routed via SPA) -->
+  <div id="custom-404" style="display:none;">
+    <h2>Page Not Found</h2>
+    <p>We're sorry, the page you're looking for doesn't exist. <a href="/">Go back to the homepage</a>.</p>
+  </div>
+
+  <!-- Footer with social links -->
+  <footer>
+    <p>&copy; 2025 Al Thakeel. All rights reserved.</p>
+    <div class="addthis_inline_share_toolbox"></div>
+  </footer>
+</body>
 </html>
